# Offline-RAG

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: chat.py  compare.py
src/rag_project/: config.py  ingestion.py  retrieval.py
